--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ dependencies = [
     "datamodel-code-generator>=0.33.0",
     "fastapi>=0.116.1",
     "httpx>=0.28.1",
+    "invoke>=2.2.0",
     "ipython>=9.5.0",
     "ruff>=0.13.0",
+    "sqlalchemy[asyncio]>=2.0.43",
     "uvicorn[standard]>=0.35.0",
 ]
 
