--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "apscheduler>=3.11.0",
     "asyncpg>=0.30.0",
     "datamodel-code-generator>=0.33.0",
     "fastapi>=0.116.1",
