--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "apscheduler>=3.11.0",
     "asyncpg>=0.30.0",
+    "bokeh>=3.8.0",
     "datamodel-code-generator>=0.33.0",
     "fastapi>=0.116.1",
     "httpx>=0.28.1",
